{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 10,
  "lineage": "d0728da6-ea95-1d01-10a5-3204671055e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0592883792f4f22a1",
            "id": "rtb-0592883792f4f22a1",
            "owner_id": "405873723470",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf_private"
            },
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:internet-gateway/igw-00ac984912db8895c",
            "id": "igw-00ac984912db8895c",
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e68770827d95327",
            "owner_id": "405873723470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ac984912db8895c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d156ba37c194e6",
            "route_table_id": "rtb-05e68770827d95327",
            "subnet_id": "subnet-0944be43787b92311"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056d7664e50dace28",
            "route_table_id": "rtb-05e68770827d95327",
            "subnet_id": "subnet-027cbe02ca0b9a41a"
          },
          "dependencies": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:security-group/sg-0a0aacca1a2513e4a",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0aacca1a2513e4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "405873723470",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:subnet/subnet-0944be43787b92311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0944be43787b92311",
            "map_public_ip_on_launch": true,
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_public_1"
            },
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:subnet/subnet-027cbe02ca0b9a41a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-027cbe02ca0b9a41a",
            "map_public_ip_on_launch": true,
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_public_2"
            },
            "vpc_id": "vpc-02a49b0fb559e8a52"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405873723470:vpc/vpc-02a49b0fb559e8a52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-027b78e30d4bf60dd",
            "default_route_table_id": "rtb-0592883792f4f22a1",
            "default_security_group_id": "sg-0d3b62860566a895b",
            "dhcp_options_id": "dopt-093832f6f36258a3f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a49b0fb559e8a52",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0592883792f4f22a1",
            "owner_id": "405873723470",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}